# xiaobo-tool-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: example.py  example.txt  example_async.py
src/xiaobo_tool/: __init__.py  proxy_pool.py  temp_email.py  utils.py
src/xiaobo_tool/task_executor/: __init__.py  exceptions.py  executor.py  manager.py  models.py  settings.py
src/xiaobo_tool/x/: __init__.py  x.py
tests/: conftest.py  test_executor.py  test_manager.py  test_models.py  test_proxy_pool.py  test_settings.py  test_utils.py  test_x.py
