[project]
name = "xiaobo-tool"
version = "1.0.5"
description = "python version of xiaobo tool module"
readme = "README.md"
authors = [
    { name = "Xiaobo", email = "17623577915@163.com" }
]
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.14.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"


